# FailoverQueue

./: CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README.markdown
include/: FailoverQueue.hpp
tests/: 01_basic.cpp  02_complex.cpp  03_uneven.cpp  04_even.cpp  05_order.cpp  06_missing.cpp  CMakeLists.txt
